--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="vendors/css/normalize.css" />
 		<link rel="stylesheet" href="resources/css/style.css" />
+		<link rel="stylesheet" href="resources/css/queries.css" />
+
 		<link rel="stylesheet" href="vendors/css/simple-grid.css" />
 
 		<link
@@ -215,12 +217,12 @@
 			</div>
 			<div class="row">
 				<div class="col-3 box location">
-					<img src="resources/img/lisbon-3.jpg" alt="Lisbon city" />
+					<img src="resources/img/nairobi.jpg" alt="Nairobi city" />
 
-					<h3>Lisbon</h3>
+					<h3>Nairobi</h3>
 					<div class="city-feature">
 						<ion-icon name="people-sharp" class="icon-small"></ion-icon>
-						1600+ happy eaters
+						3600+ happy eaters
 					</div>
 					<div class="city-feature">
 						<ion-icon name="restaurant-sharp" class="icon-small"></ion-icon>
@@ -228,14 +230,14 @@
 					</div>
 					<div class="city-feature">
 						<ion-icon name="logo-instagram" class="icon-small"></ion-icon>
-						<a href="http://">@omnifood_lx</a>
+						<a href="http://">@tapnshop</a>
 					</div>
 				</div>
 
 				<div class="col-3 box location">
-					<img src="resources/img/san-francisco.jpg" alt="Lisbon city" />
+					<img src="resources/img/nakuru2.jpg" alt="Lisbon city" />
 
-					<h3>San Francisco</h3>
+					<h3>Nakuru</h3>
 					<div class="city-feature">
 						<ion-icon name="people-sharp" class="icon-small"></ion-icon>
 						3700+ happy eaters
@@ -246,14 +248,14 @@
 					</div>
 					<div class="city-feature">
 						<ion-icon name="logo-instagram" class="icon-small"></ion-icon>
-						<a href="http://">@omnifood_sf</a>
+						<a href="http://">@tapnshop</a>
 					</div>
 				</div>
 
 				<div class="col-3 box location">
-					<img src="resources/img/berlin.jpg" alt="Lisbon city" />
+					<img src="resources/img/kisumu.jpg" alt="Kisumu city" />
 
-					<h3>Berlin</h3>
+					<h3>Kisumu</h3>
 					<div class="city-feature">
 						<ion-icon name="people-sharp" class="icon-small"></ion-icon>
 						2300+ happy eaters
@@ -265,14 +267,14 @@
 					<div class="city-feature">
 						<ion-icon name="logo-instagram" class="icon-small"></ion-icon>
 
-						<a href="http://">@omnifood_berlin </a>
+						<a href="http://">@tapnshop </a>
 					</div>
 				</div>
 
 				<div class="col-3 box location">
-					<img src="resources/img/london.jpg" alt="Lisbon city" />
+					<img src="resources/img/mombasa.jpg" alt="Mombasa city" />
 
-					<h3>London</h3>
+					<h3>Mombasa</h3>
 					<div class="city-feature">
 						<ion-icon name="people-sharp" class="icon-small"></ion-icon>
 						1200+ happy eaters
@@ -283,7 +285,7 @@
 					</div>
 					<div class="city-feature">
 						<ion-icon name="logo-instagram" class="icon-small"></ion-icon>
-						<a href="http://">@omnifood_london</a>
+						<a href="http://">@tapnshop</a>
 					</div>
 				</div>
 			</div>
@@ -297,23 +299,22 @@
 			</div>
 			<div class="row">
 				<div class="col-4">
-					<blockquote>Omnifood is just awesome! I just launched a startup which leaves me
-						with no time for cooking, so Omnifood is a life-saver. Now that I got
-						used to it, I couldn't live without my daily meals!</> (Alberto Duncan)</blockquote> 
-					<cite><img src="resources/img/customer-1.jpg" alt="Alberto Duncan" /></cite>
+					<blockquote>Omnifood is just awesome! I just launched a book which leaves me
+						with no time for cooking, so TapnShop is a life-saver. Now that I got
+						used to it, I couldn't live without my daily meals!</> (Ngugi wa Thiongo)</blockquote> 
+					<cite><img src="resources/img/ngugi.jpg" alt="Ngugi wa Thiongo" /></cite>
 				</div>
 				<div class="col-4">
 					<blockquote>Inexpensive, healthy and great-tasting meals, delivered right to my
 						home. We have lots of food delivery here in Lisbon, but no one comes
-						even close to Omifood. Me and my family are so in love! (Joana Silva)</blockquote> 
-					<cite><img src="resources/img/customer-2.jpg" alt="Joana Silva" /></cite>
+						even close to Omifood. Me and my family are so in love! (Nekel Ole Ntima)</blockquote> 
+					<cite><img src="resources/img/maasai.jpg" alt="Nekel Ole Ntima" /></cite>
 				</div>
 				<div class="col-4">
 					<blockquote>I was looking for a quick and easy food delivery service in San
-						Franciso. I tried a lot of them and ended up with Omnifood. Best food
-						delivery service in the Bay Area. Keep up the great work! (Milton
-						Chapman)</blockquote> 
-					<cite><img src="resources/img/customer-3.jpg" alt="Milton Chapman" /></cite>
+						Franciso. I tried a lot of them and ended up with TapnShop. Best food
+						delivery service in the Kajiado Area. Keep up the great work! (Ole Lenku Sankai)</blockquote> 
+					<cite><img src="resources/img/maasaiman.jpg" alt="Ole Lenku Sankai" /></cite>
 				</div>
 			</div>
 		</section>
