Adding Kenyan towns

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 			</div>
 			<div class="row">
 				<div class="col-3 box location">
-					<img src="resources/img/nairobi.jpg" alt="Nairobi city" />
+					<img src="resources/img/nairobi.jpeg" alt="Nairobi city" />
 
 					<h3>Nairobi</h3>
 					<div class="city-feature">
@@ -235,7 +235,7 @@
 				</div>
 
 				<div class="col-3 box location">
-					<img src="resources/img/nakuru2.jpg" alt="Lisbon city" />
+					<img src="resources/img/nakuru2.jpeg" alt="Nakuru city" />
 
 					<h3>Nakuru</h3>
 					<div class="city-feature">
@@ -253,7 +253,7 @@
 				</div>
 
 				<div class="col-3 box location">
-					<img src="resources/img/kisumu.jpg" alt="Kisumu city" />
+					<img src="resources/img/kisumu.jpeg" alt="Kisumu city" />
 
 					<h3>Kisumu</h3>
 					<div class="city-feature">
@@ -272,7 +272,7 @@
 				</div>
 
 				<div class="col-3 box location">
-					<img src="resources/img/mombasa.jpg" alt="Mombasa city" />
+					<img src="resources/img/mombasa.jpeg" alt="Mombasa city" />
 
 					<h3>Mombasa</h3>
 					<div class="city-feature">
@@ -302,19 +302,19 @@
 					<blockquote>Omnifood is just awesome! I just launched a book which leaves me
 						with no time for cooking, so TapnShop is a life-saver. Now that I got
 						used to it, I couldn't live without my daily meals!</> (Ngugi wa Thiongo)</blockquote> 
-					<cite><img src="resources/img/ngugi.jpg" alt="Ngugi wa Thiongo" /></cite>
+					<cite><img src="resources/img/ngugi.jpeg" alt="Ngugi wa Thiongo" /></cite>
 				</div>
 				<div class="col-4">
 					<blockquote>Inexpensive, healthy and great-tasting meals, delivered right to my
 						home. We have lots of food delivery here in Lisbon, but no one comes
 						even close to Omifood. Me and my family are so in love! (Nekel Ole Ntima)</blockquote> 
-					<cite><img src="resources/img/maasai.jpg" alt="Nekel Ole Ntima" /></cite>
+					<cite><img src="resources/img/maasai.jpeg" alt="Nekel Ole Ntima" /></cite>
 				</div>
 				<div class="col-4">
 					<blockquote>I was looking for a quick and easy food delivery service in San
 						Franciso. I tried a lot of them and ended up with TapnShop. Best food
 						delivery service in the Kajiado Area. Keep up the great work! (Ole Lenku Sankai)</blockquote> 
-					<cite><img src="resources/img/maasaiman.jpg" alt="Ole Lenku Sankai" /></cite>
+					<cite><img src="resources/img/maasaiman.jpeg" alt="Ole Lenku Sankai" /></cite>
 				</div>
 			</div>
 		</section>
