Add image resources

--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
 				<div class="col-4">
 					<blockquote>Inexpensive, healthy and great-tasting meals, delivered right to my
 						home. We have lots of food delivery here in Lisbon, but no one comes
-						even close to Omifood. Me and my family are so in love! (Nekel Ole Ntima)</blockquote> 
-					<cite><img src="resources/img/maasai.jpeg" alt="Nekel Ole Ntima" /></cite>
+						even close to Omifood. Me and my family are so in love! (Tiye Ole Ntima)</blockquote> 
+					<cite><img src="resources/img/maasai.jpeg" alt="Tiye Ole Ntima" /></cite>
 				</div>
 				<div class="col-4">
 					<blockquote>I was looking for a quick and easy food delivery service in San
