--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 			rel="stylesheet"
 		/>
 
-		<title>Omnifood</title>
+		<title>FastFood</title>
 	</head>
 	<body>
 		<header>
 			<nav>
 				<div class="row">
 					<img
-						src="resources/img/logo-white.png"
-						alt="Omnifood logo"
+						src="resources/img/logo.png"
+						alt="FastFood logo"
 						class="logo"
 					/>
 					<ul class="main-nav">
@@ -45,9 +45,9 @@
 		<!----------------FEATURES SECTION---------------------->
 		<section class="section-features">
 			<div class="row">
-				<h2>Get food fast &mdash; not fast food.</h2>
+				<h2>Get food fast &mdash; and fill up </h2>
 				<p class="long-copy">
-					Hello, we’re Omnifood, your new premium food delivery service. We
+					Hello, we’re Fast Food, your new premium food delivery service. We
 					know you’re always busy. No time for cooking. So let us take care of
 					that, we’re really good at it, we promise!
 				</p>
@@ -172,7 +172,7 @@
 			<div class="row">
 				<div class="col-6 steps-box">
 					<img
-						src="resources/img/app-iPhone.png"
+						src="resources/img/app-iPhone1.png"
 						alt="omnifood iphone app"
 						class="app-screen"
 					/>
@@ -299,7 +299,7 @@
 			</div>
 			<div class="row">
 				<div class="col-4">
-					<blockquote>Omnifood is just awesome! I just launched a book which leaves me
+					<blockquote>Fast Food is just awesome! I just launched a book which leaves me
 						with no time for cooking, so TapnShop is a life-saver. Now that I got
 						used to it, I couldn't live without my daily meals!</> (Ngugi wa Thiongo)</blockquote> 
 					<cite><img src="resources/img/ngugi.jpeg" alt="Ngugi wa Thiongo" /></cite>
